# tv-epg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: omega-build.yml  omega-release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  main.rs'  xmltv_mapper.rs
crates/core/: Cargo.toml
crates/core/src/: channel.rs  circuit_breaker.rs  config.rs  error.rs  http.rs  lib.rs  match_result.rs  programme.rs  provider.rs  provider_trait.rs  rate_limiter.rs  retry.rs  review.rs  unified_channel.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  sqlite.rs
crates/database/src/repositories/: audit_repository.rs  channel_repository.rs  export_repository.rs  match_repository.rs  mod.rs  programme_repository.rs  provider_channel_repository.rs  review_repository.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: alias.rs  clean.rs  jaccard.rs  lib.rs  resolver.rs  reviewer.rs  scoring.rs  similarity.rs
crates/playlist/: Cargo.toml
crates/playlist/src/: builder.rs  index_builder.rs  lib.rs  model.rs  parser.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/providers/src/iptv_org/: mod.rs  parser.rs
crates/providers/src/jio/: channels.rs  epg.rs  maps.rs  mod.rs  models.rs  provider.rs
crates/providers/src/zee5/: catalog.rs  channels.rs  epg.rs  logos.rs  mod.rs  models.rs  provider.rs
crates/xmltv/: Cargo.toml
crates/xmltv/src/: gzip.rs  lib.rs  models.rs  time.rs  writer.rs
docs/: OMEGA_RELEASE.md  OMEGA_RELEASE.md.save
migrations/: 0001_initial.sql
