[workspace]
resolver = "2"

members = [
    "apps/cli",
    "crates/core",
    "crates/database",
    "crates/matcher",
    "crates/providers",
    "crates/playlist",
    "crates/xmltv"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Subhrajyoti Satapathy"]
repository = "https://github.com/Subhrajyoti0/iptv-repo"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
quick-xml = "0.38"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
strsim = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
