[package]
name = "omega-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

omega-core = { path = "../core" }
omega-playlist = { path = "../playlist" }
