[package]
name = "omega-xmltv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true

omega-core = { path = "../core" }
